Integrate TaskScheduler library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,17 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(MBCRAWLER CXX)
-include (GNUInstallDirs)
+project(MBCRAWLER LANGUAGES CXX VERSION 1.0)
+
+include(GNUInstallDirs)
+include(FetchContent)
 
 set (CMAKE_CXX_STANDARD 17)
 
 
 set (FIND_LIBRARY_USE_LIB64_PATHS TRUE)
+
+#find_package (TaskScheduler 1.0 REQUIRED)
+
 
 #[[
 set (Boost_USE_MULTITHREADED ON)
@@ -14,6 +19,14 @@ set (Boost_NO_BOOST_CMAKE ON)
 set (Boost_USE_STATIC_LIBS OFF)
 find_package (Boost 1.67 REQUIRED)
 #]]
+
+set (BUILD_TASKSCHEDULER_TESTAPP OFF CACHE STRING "")
+FetchContent_Declare(
+    TaskSchedulerPrj
+    GIT_REPOSITORY https://github.com/abigagli/TaskScheduler.git
+    )
+
+FetchContent_MakeAvailable(TaskSchedulerPrj)
 
 add_subdirectory(3rdParty)
 
@@ -32,7 +45,8 @@ add_custom_command (OUTPUT ${CMAKE_SOURCE_DIR}/compile_commands.json
     COMMENT "Symlinking compile_commands.json"
     )
 
-target_link_libraries (${APPLICATION_TARGET_NAME} PRIVATE MODBUS::static nlohmann_json::nlohmann_json)
+target_link_libraries (${APPLICATION_TARGET_NAME}
+    PRIVATE MODBUS::static nlohmann_json::nlohmann_json TaskScheduler::TaskScheduler)
 
 target_compile_options (${APPLICATION_TARGET_NAME} PRIVATE $<$<CONFIG:Debug>:-fno-omit-frame-pointer>)
 
