Kick off measure scheduler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,8 @@ set (APPLICATION_TARGET_NAME mbcrawler)
 
 add_executable (${APPLICATION_TARGET_NAME}
     src/main.cpp
+    src/meas_config.cpp
+    src/meas_scheduler.cpp
     $<$<CONFIG:Debug>:${CMAKE_SOURCE_DIR}/compile_commands.json> #<-- Having this as a dependency will cause the custom command below to execute...
     )
 
