Add support for asio based scheduler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,39 +1,49 @@
 cmake_minimum_required(VERSION 3.16)
 
 project(MBCRAWLER LANGUAGES CXX VERSION 1.0)
+set (APPLICATION_TARGET_NAME mbcrawler)
 
 include(GNUInstallDirs)
 include(FetchContent)
 
+option (USE_ASIO_BASED_SCHEDULER OFF)
+
 set (CMAKE_CXX_STANDARD 17)
 
+add_executable (${APPLICATION_TARGET_NAME})
 
 set (FIND_LIBRARY_USE_LIB64_PATHS TRUE)
 
-#find_package (TaskScheduler 1.0 REQUIRED)
+if (USE_ASIO_BASED_SCHEDULER)
+    set (Boost_USE_MULTITHREADED ON)
+    set (Boost_NO_BOOST_CMAKE ON)
+    set (Boost_USE_STATIC_LIBS OFF)
+    find_package (Boost 1.67 REQUIRED)
 
+    target_sources (${APPLICATION_TARGET_NAME}
+        PRIVATE
+        src/periodic_scheduler.cpp
+        )
+    target_compile_definitions (${APPLICATION_TARGET_NAME} PRIVATE USE_ASIO_BASED_SCHEDULER)
+    target_link_libraries (${APPLICATION_TARGET_NAME} PRIVATE Boost::headers)
+else()
+    #find_package (TaskScheduler 1.0 REQUIRED)
 
-#[[
-set (Boost_USE_MULTITHREADED ON)
-set (Boost_NO_BOOST_CMAKE ON)
-set (Boost_USE_STATIC_LIBS OFF)
-find_package (Boost 1.67 REQUIRED)
-#]]
+    set (BUILD_TASKSCHEDULER_TESTAPP OFF CACHE STRING "")
+    FetchContent_Declare(
+        TaskSchedulerPrj
+        GIT_REPOSITORY https://github.com/abigagli/TaskScheduler.git
+        )
 
-set (BUILD_TASKSCHEDULER_TESTAPP OFF CACHE STRING "")
-FetchContent_Declare(
-    TaskSchedulerPrj
-    GIT_REPOSITORY https://github.com/abigagli/TaskScheduler.git
-    )
-
-FetchContent_MakeAvailable(TaskSchedulerPrj)
+    FetchContent_MakeAvailable(TaskSchedulerPrj)
+    target_link_libraries (${APPLICATION_TARGET_NAME} PRIVATE TaskScheduler::TaskScheduler)
+endif()
 
 add_subdirectory(3rdParty)
 
 
-set (APPLICATION_TARGET_NAME mbcrawler)
-
-add_executable (${APPLICATION_TARGET_NAME}
+target_sources (${APPLICATION_TARGET_NAME}
+    PRIVATE
     src/main.cpp
     src/meas_config.cpp
     src/meas_scheduler.cpp
@@ -48,7 +58,7 @@ add_custom_command (OUTPUT ${CMAKE_SOURCE_DIR}/compile_commands.json
     )
 
 target_link_libraries (${APPLICATION_TARGET_NAME}
-    PRIVATE MODBUS::static nlohmann_json::nlohmann_json TaskScheduler::TaskScheduler)
+    PRIVATE MODBUS::static nlohmann_json::nlohmann_json)
 
 target_compile_options (${APPLICATION_TARGET_NAME} PRIVATE $<$<CONFIG:Debug>:-fno-omit-frame-pointer>)
 
