--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ cmake_dependent_option (USE_STANDALONE_ASIO "" ON USE_ASIO_BASED_SCHEDULER OFF)
 set (CMAKE_CXX_STANDARD 17)
 
 add_executable (${APPLICATION_TARGET_NAME})
+set_target_properties (${APPLICATION_TARGET_NAME} PROPERTIES DEBUG_POSTFIX "D")
+
 
 set (FIND_LIBRARY_USE_LIB64_PATHS TRUE)
 
