Factor common json support stuff in a dedicated file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ target_sources (${APPLICATION_TARGET_NAME}
     src/meas_config.cpp
     src/meas_scheduler.cpp
     src/meas_reporter.cpp
+    src/json_support.cpp
     ${CMAKE_SOURCE_DIR}/compile_commands.json #<-- Having this as a dependency will cause the custom command below to execute...
     )
 
