--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,83 +1,37 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(MBCRAWLER LANGUAGES CXX VERSION 1.0)
-set (APPLICATION_TARGET_NAME mbcrawler)
+project(MODBUS LANGUAGES CXX VERSION 1.0)
 
 include(GNUInstallDirs)
 include(FetchContent)
 
-# See comment below fow why we need to add Threads as an explicit dep...
-find_package (Threads)
+set (CMAKE_CXX_STANDARD 17)
+set (FIND_LIBRARY_USE_LIB64_PATHS TRUE)
 
 option (USE_STANDALONE_ASIO "" ON)
 
-set (CMAKE_CXX_STANDARD 17)
-
-add_executable (${APPLICATION_TARGET_NAME})
-set_target_properties (${APPLICATION_TARGET_NAME} PROPERTIES DEBUG_POSTFIX "D")
-
-set (FIND_LIBRARY_USE_LIB64_PATHS TRUE)
-
 add_subdirectory(3rdParty)
 
-target_include_directories (${APPLICATION_TARGET_NAME}
-    PRIVATE
-    ${CMAKE_CURRENT_BINARY_DIR}/3rdParty/loguru/loguru-src
+add_custom_target(
+    copy_current_compile_commands
+    DEPENDS ${CMAKE_SOURCE_DIR}/compile_commands.json
     )
 
-target_sources (${APPLICATION_TARGET_NAME}
-    PRIVATE
-    src/main.cpp
-    src/meas_config.cpp
-    src/meas_executor.cpp
-    src/meas_reporter.cpp
-    src/json_support.cpp
-    src/periodic_scheduler.cpp
-    ${CMAKE_CURRENT_BINARY_DIR}/3rdParty/loguru/loguru-src/loguru.cpp
-    ${CMAKE_SOURCE_DIR}/compile_commands.json #<-- Having this as a dependency will cause the custom command below to execute...
-    )
-
-target_compile_options (${APPLICATION_TARGET_NAME}
-PRIVATE
-    #$<$<CONFIG:Debug>:-fno-omit-frame-pointer -fsanitize=address -fsanitize=signed-integer-overflow -fsanitize=unsigned-integer-overflow>
-    $<$<CONFIG:Debug>:-fno-omit-frame-pointer -fsanitize=address -fsanitize=signed-integer-overflow>
-    -DLOGURU_WITH_STREAMS=1
-    -DLOGURU_WITH_FILEABS=1
-)
-
-target_link_options (${APPLICATION_TARGET_NAME}
-PRIVATE
-    #$<$<CONFIG:Debug>:-fsanitize=address -fsanitize=signed-integer-overflow -fsanitize=unsigned-integer-overflow>
-    $<$<CONFIG:Debug>:-fsanitize=address -fsanitize=signed-integer-overflow>
-)
-
-# Since this custom command's OUTPUT is a dependency of our executable target
-# the custom command itself will be executed at build time to produce such OUTPUT 
-add_custom_command (OUTPUT ${CMAKE_SOURCE_DIR}/compile_commands.json
-    COMMAND ln -sf ${CMAKE_BINARY_DIR}/compile_commands.json ${CMAKE_SOURCE_DIR}
+add_custom_command (
+    OUTPUT ${CMAKE_SOURCE_DIR}/compile_commands.json
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different compile_commands.json ${CMAKE_SOURCE_DIR}
+    # Since we use copy_if_different, the target of the copy (i.e. ${CMAKE_SOURCE_DIR}/compile_commands.json)
+    # is a "BYPRODUCT" since its timestamp may _not_ be newer than this command dependency (i.e. the source of the copy)
+    # (simply because the source compile_commands.json gets a newer timestamp, but the content is the same so it is
+    # not copied).
+    # In that case this command would keep re-executing (even if it wouldn't actually copy anything since the contents is the same)
+    # just because the OUTPUT's timestamp keeps staying the same while the dependency (i.e. the source of the copy) gets
+    # a newer timestamp.
+    # So by explicitly 'touching' it, we ensure its timestamp gets updated even if its contents were not, and so
+    # the command doesn't actually execute unless there's a new/different source compile_commands.json
+    COMMAND ${CMAKE_COMMAND} -E touch ${CMAKE_SOURCE_DIR}/compile_commands.json
     DEPENDS ${CMAKE_BINARY_DIR}/compile_commands.json
-    COMMENT "Symlinking compile_commands.json"
+    COMMENT "Ensuring current compile_commands.json is in root folder"
     )
-
-if (USE_STANDALONE_ASIO)
-    target_include_directories (${APPLICATION_TARGET_NAME}
-        PRIVATE
-        ${CMAKE_CURRENT_BINARY_DIR}/3rdParty/asio/asio-src/include
-        )
-    target_compile_definitions (${APPLICATION_TARGET_NAME}
-        PRIVATE
-        ASIO_STANDALONE)
-else (USE_STANDALONE_ASIO)
-    target_link_libraries (${APPLICATION_TARGET_NAME}
-        PRIVATE
-        Boost::headers)
-endif (USE_STANDALONE_ASIO)
-
-target_link_libraries (${APPLICATION_TARGET_NAME}
-    PRIVATE
-    ${CMAKE_DL_LIBS}
-    MODBUS::static
-    nlohmann_json::nlohmann_json
-    Threads::Threads) #<<--- Omitting this makes linking fail on Linux: See https://discourse.cmake.org/t/boost-process-target-doesnt-exist-for-thread-linking/2113
-
-install (TARGETS ${APPLICATION_TARGET_NAME} RUNTIME DESTINATION bin)
+add_subdirectory(src/crawler)
+add_subdirectory(src/pwrmeter_client)
