Major: refactor file/functions layout

--- a/3rdParty/asio/CMakeLists.txt
+++ b/3rdParty/asio/CMakeLists.txt
@@ -10,6 +10,12 @@ if (USE_STANDALONE_ASIO)
         )
 
     FetchContent_MakeAvailable(asio)
+    add_library(asio INTERFACE)
+    target_include_directories(asio INTERFACE ${asio_SOURCE_DIR}/include)
+    set_target_properties(asio
+        PROPERTIES
+            INTERFACE_SYSTEM_INCLUDE_DIRECTORIES ${asio_SOURCE_DIR}/include)
+    add_library(ASIO::headers ALIAS asio)
 else(USE_STANDALONE_ASIO)
 
     message(STATUS "******* BOOST ASIO *******")
@@ -17,6 +23,9 @@ else(USE_STANDALONE_ASIO)
     set (Boost_NO_BOOST_CMAKE ON)
     set (Boost_USE_STATIC_LIBS OFF)
     find_package (Boost 1.67 REQUIRED)
-    set_target_properties(Boost::headers PROPERTIES IMPORTED_GLOBAL ON)
+    set_target_properties(Boost::headers
+        PROPERTIES
+            IMPORTED_GLOBAL ON
+            INTERFACE_SYSTEM_INCLUDE_DIRECTORIES $<TARGET_PROPERTY:Boost::headers, INTERFACE_INCLUDE_DIRECTORIES>)
 
 endif(USE_STANDALONE_ASIO)
