--- a/src/crawler/CMakeLists.txt
+++ b/src/crawler/CMakeLists.txt
@@ -8,7 +8,6 @@ add_dependencies(${APPLICATION_TARGET_NAME} copy_current_compile_commands)
 set_target_properties (${APPLICATION_TARGET_NAME} PROPERTIES DEBUG_POSTFIX "D")
 
 FetchContent_GetProperties(loguru)
-FetchContent_GetProperties(asio)
 
 target_include_directories (${APPLICATION_TARGET_NAME}
     PRIVATE
@@ -24,6 +23,7 @@ target_sources (${APPLICATION_TARGET_NAME}
     meas_reporter.cpp
     json_support.cpp
     periodic_scheduler.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/../modbus_ops.cpp
     ${loguru_SOURCE_DIR}/loguru.cpp
     #${CMAKE_SOURCE_DIR}/compile_commands.json #<-- Having this as a dependency will cause the custom command below to execute...
     )
@@ -32,6 +32,7 @@ target_compile_options (${APPLICATION_TARGET_NAME}
 PRIVATE
     #$<$<CONFIG:Debug>:-fno-omit-frame-pointer -fsanitize=address -fsanitize=signed-integer-overflow -fsanitize=unsigned-integer-overflow>
     $<$<CONFIG:Debug>:-fno-omit-frame-pointer -fsanitize=address -fsanitize=signed-integer-overflow>
+    -DUSE_LOGURU
     -DLOGURU_WITH_STREAMS=1
     -DLOGURU_WITH_FILEABS=1
 )
@@ -43,13 +44,12 @@ PRIVATE
 )
 
 if (USE_STANDALONE_ASIO)
-    target_include_directories (${APPLICATION_TARGET_NAME}
-        PRIVATE
-        ${asio_SOURCE_DIR}/include
-        )
     target_compile_definitions (${APPLICATION_TARGET_NAME}
         PRIVATE
         ASIO_STANDALONE)
+    target_link_libraries (${APPLICATION_TARGET_NAME}
+        PRIVATE
+        ASIO::headers)
 else (USE_STANDALONE_ASIO)
     target_link_libraries (${APPLICATION_TARGET_NAME}
         PRIVATE
