--- a/src/crawler/CMakeLists.txt
+++ b/src/crawler/CMakeLists.txt
@@ -3,64 +3,62 @@ set (APPLICATION_TARGET_NAME mbcrawler)
 # See comment below fow why we need to add Threads as an explicit dep...
 find_package (Threads)
 
-add_executable (${APPLICATION_TARGET_NAME})
-add_dependencies(${APPLICATION_TARGET_NAME} copy_current_compile_commands)
-set_target_properties (${APPLICATION_TARGET_NAME} PROPERTIES DEBUG_POSTFIX "D")
-
 FetchContent_GetProperties(loguru)
 
-target_include_directories (${APPLICATION_TARGET_NAME}
-    PRIVATE
-    ${CMAKE_CURRENT_LIST_DIR}/..
-    ${loguru_SOURCE_DIR}
-    )
-
-target_sources (${APPLICATION_TARGET_NAME}
-    PRIVATE
-    main.cpp
+add_library (crawler
+OBJECT
     meas_config.cpp
     meas_executor.cpp
     meas_reporter.cpp
     json_support.cpp
     periodic_scheduler.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/../modbus_ops.cpp
     ${loguru_SOURCE_DIR}/loguru.cpp
-    #${CMAKE_SOURCE_DIR}/compile_commands.json #<-- Having this as a dependency will cause the custom command below to execute...
+)
+
+target_include_directories (crawler
+PUBLIC
+    ${loguru_SOURCE_DIR}
     )
 
-target_compile_options (${APPLICATION_TARGET_NAME}
-PRIVATE
-    #$<$<CONFIG:Debug>:-fno-omit-frame-pointer -fsanitize=address -fsanitize=signed-integer-overflow -fsanitize=unsigned-integer-overflow>
-    $<$<CONFIG:Debug>:-fno-omit-frame-pointer -fsanitize=address -fsanitize=signed-integer-overflow>
+target_link_libraries(crawler
+PUBLIC
+    nlohmann_json::nlohmann_json
+    OBJECTS::common
+    )
+
+target_compile_options (crawler
+PUBLIC
     -DUSE_LOGURU
     -DLOGURU_WITH_STREAMS=1
     -DLOGURU_WITH_FILEABS=1
 )
 
-target_link_options (${APPLICATION_TARGET_NAME}
-PRIVATE
-    #$<$<CONFIG:Debug>:-fsanitize=address -fsanitize=signed-integer-overflow -fsanitize=unsigned-integer-overflow>
-    $<$<CONFIG:Debug>:-fsanitize=address -fsanitize=signed-integer-overflow>
-)
-
 if (USE_STANDALONE_ASIO)
-    target_compile_definitions (${APPLICATION_TARGET_NAME}
-        PRIVATE
+    target_compile_definitions (crawler
+        PUBLIC
         ASIO_STANDALONE)
-    target_link_libraries (${APPLICATION_TARGET_NAME}
-        PRIVATE
+    target_link_libraries (crawler
+        PUBLIC
         ASIO::headers)
 else (USE_STANDALONE_ASIO)
-    target_link_libraries (${APPLICATION_TARGET_NAME}
-        PRIVATE
+    target_link_libraries (crawler
+        PUBLIC
         Boost::headers)
 endif (USE_STANDALONE_ASIO)
+
+add_executable (${APPLICATION_TARGET_NAME})
+set_target_properties (${APPLICATION_TARGET_NAME} PROPERTIES DEBUG_POSTFIX "D")
+
+target_sources (${APPLICATION_TARGET_NAME}
+    PRIVATE
+    main.cpp
+    )
 
 target_link_libraries (${APPLICATION_TARGET_NAME}
     PRIVATE
     ${CMAKE_DL_LIBS}
-    MODBUS::static
-    nlohmann_json::nlohmann_json
+    crawler
+    OBJECTS::common
     Threads::Threads) #<<--- Omitting this makes linking fail on Linux: See https://discourse.cmake.org/t/boost-process-target-doesnt-exist-for-thread-linking/2113
 
 install (TARGETS ${APPLICATION_TARGET_NAME} RUNTIME DESTINATION bin)
