--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
 
 project(MODBUS LANGUAGES CXX VERSION 1.0)
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+    include (CTest)
+endif()
 
 include(GNUInstallDirs)
 include(FetchContent)
@@ -35,3 +38,6 @@ add_custom_command (
     )
 
 add_subdirectory(src)
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
+    add_subdirectory(tests)
+endif()
