Fix link of tests on linux arm

--- a/tests/crawler/CMakeLists.txt
+++ b/tests/crawler/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(test_crawler main.cpp)
 
 target_link_libraries (test_crawler
 PRIVATE
+    ${CMAKE_DL_LIBS}
     OBJECTS::crawler
     OBJECTS::common
 )
